clusters/home/apps/affine/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: affine
  labels:
    istio.io/dataplane-mode: ambient
    istio.io/use-waypoint: waypoint
