clusters/home/apps/affine/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine
  namespace: affine
spec:
  selector:
    app: affine
  ports:
    - name: http
      port: 3010
      targetPort: 3010
