clusters/home/apps/affine/tailscale-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: affine
  namespace: affine
  annotations:
    tailscale.com/hostname: affine
spec:
  ingressClassName: tailscale
  defaultBackend:
    service:
      name: affine
      port:
        number: 3010
